Remove border collapse to display curr day and slot border correctly

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -13,7 +13,7 @@
 
 table {
   width: 100%;
-  border-collapse: collapse;
+  /* border-collapse: collapse; */
   margin-top: 20px;
   font-family: Arial, sans-serif;
 }
